--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,6 +2,16 @@
     background-color: #edd9d9;
 }
 
+#cafe {
+    background-color: black;
+    color: white;
+    padding-top: 3em;
+    padding-bottom: 3em;
+}
+
 img {
     border-radius: 3em;
+    
+    
 }
+
